--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -16,6 +16,8 @@ html {
 body {
     width: 100%;
     height: 100%;
+    background-color: #000;
+    color: #fff;
 }
 img,video,canvas,svg {
     display: block;
@@ -29,8 +31,17 @@ p,h1,h2,h3,h4,h5,h6 {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     height: 100vh;
-    max-width: 100%;
+    width: 100%;
     top: 0;
     left: 0;
+}
+
+.banner h3 {
+    font-size: 32px;
 }
